--- a/source/styles/sections/second.scss
+++ b/source/styles/sections/second.scss
@@ -1,37 +1,17 @@
 .second {
-    position: relative;
-    padding: 56.75% 0 0;
-    background: url('../images/second/second_bg.png') center center no-repeat;
+    background: url('../images/second/second_bg_750.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
 
     &__inner {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
     }
 
     &__logo {
-        padding: 83px 0 35px;
+        padding: 16px 0 0;
+        text-align: center;
 
         img {
-            width: 681px;
-            margin: 0 0 0 -25px;
-        }
-
-        @media (max-width: 1919px) {
-            padding: 20px 0 0;
-        }
-
-        @media (max-width: 1599px) {
-            padding: 3vw 0;
-
-            img {
-                width: 350px;
-                margin: 0 0 0 8.33vw;
-            }
+            width: 270px;
         }
     }
 
@@ -41,20 +21,20 @@
 }
 
 .tab {
-    width: 740px;
+    width: 470px;
     font-family: "RoadRadio-Bold";
-    font-size: 40px;
+    font-size: 22px;
     line-height: 1.2;
     letter-spacing: -0.9px;
     text-transform: none;
     text-shadow: 0px 2px 9.5px rgba(0, 0, 0, 0.3);
     border-collapse: separate;
-    border-spacing: 16px;
-    margin: 0 0 0 312px;
+    border-spacing: 5px;
+    margin: 0 auto 34px;
 
     td {
         border-radius: 3px;
-        padding: 3px 5px 3px 15px;
+        padding: 10px 5px 10px 15px;
 
         .tab__large {
             display: inline-block;
@@ -65,29 +45,22 @@
     
     &__title {
         font-family: "RussoOne";
-        font-size: 50px;
+        font-size: 35px;
         letter-spacing: -1.5px;
+        transform: translate3d(-50px, 0, 0);
     }
 
     &__red {
-        width: 150px;
+        width: 125px;
         padding: 3px 5px 3px 0 !important;
+        font-size: 32px;
         text-align: center;
         background-color: #bf1e2e;
 
         &--last {
             padding: 5px 0px 6px 8px !important;
+            font-size: 22px;
             letter-spacing: -2px;
-        }
-    }
-
-    @media (max-width: 1599px) {
-        font-size: 32px;
-        border-spacing: 8px;
-        margin: 0 0 0 8.33vw;
-
-        &__title {
-            font-size: 40px;
         }
     }
 }
