--- a/source/styles/sections/sixth.scss
+++ b/source/styles/sections/sixth.scss
@@ -1,33 +1,22 @@
 .sixth {
-    position: relative;
-    padding: 56.75% 0 0;
-    background: url('../images/sixth/sixth_bg.png') center center no-repeat;
+    padding: 0 0 100px;
+    background: url('../images/sixth/sixth_bg_750.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
 
     &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
         text-align: left;
     }
 
     &__inner {
-        width: 91.667%;
-        padding: 101px 0 0;
 
-        @media (max-width: 1919px) {
-            padding: 40px 0 0;
-        }
     }
 
     &__title {
-        padding: 0 0 0 31px;
+        padding: 28px 0 0 0;
         font-family: "RussoOne";
-        font-size: 40px;
-        line-height: 70px;
+        font-size: 30px;
+        line-height: 50px;
         letter-spacing: -0.5px;
         text-align: center;
         text-transform: uppercase;
@@ -37,25 +26,10 @@
         span {
             display: inline-block;
             vertical-align: top;
-            width: 67%;
             padding: 0 20px 0 0;
-            font-size: 30px;
-            line-height: 35px;
+            font-size: 20px;
+            line-height: 25px;
             color: #000;
-        }
-
-        @media (max-width: 1919px) {
-            margin: 0 0 30px;
-        }
-
-        @media (max-width: 1599px) {
-            font-size: 32px;
-            line-height: 45px;
-
-            span {
-                font-size: 22px;
-                line-height: 27px;
-            }
         }
     }
 
@@ -63,40 +37,19 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-
-        @media (max-width: 1599px) {
-            padding: 0 7vw 0 0;
-        }
     }
 
     &__col-one {
         padding: 46px 0 0 5px;
-
-        @media (max-width: 1919px) {
-            padding: 100px 0 0 5px;
-        }
-
-        @media (max-width: 1919px) {
-            padding: 50px 0 0 10px;
-        }
     }
 
     &__col-too {
-        @media (max-width: 1599px) {
-            margin: 55px 0 0;
-        }
+        display: none;
     }
 
     &__col-three {
+        display: none;
         margin: 125px 0 0;
-
-        @media (max-width: 1919px) {
-            margin: 65px 20px 0 -20px;
-        }
-
-        @media (max-width: 1599px) {
-            margin: 0;
-        }
     }
 
     &__item {
@@ -104,29 +57,12 @@
         justify-content: flex-start;
         align-items: flex-start;
         margin: 0 0 44px;
-
-        @media (max-width: 1919px) {
-            margin: 0 0 30px;
-        }
-
-        @media (max-width: 1599px) {
-            margin: 0 0 10px;
-        }
     }
 
     &__item-image {
         display: inline-block;
         vertical-align: top;
         min-width: 269px;
-
-        @media (max-width: 1599px) {
-            min-width: 175px;
-
-            img {
-                transform: scale(0.6);
-                transform-origin: 0% 50%;
-            }
-        }
     }
 
     &__item-content {
@@ -146,25 +82,12 @@
             font-size: 20px;
             font-weight: bold;
         }
-
-        @media (max-width: 1599px) {
-            font-size: 18px;
-
-            b {
-                font-size: 14px;
-            }
-        }
     }
 
     &__item-text {
         padding: 0 0 0 27px;
         font-family: "Jura-DemiBold";
         font-size: 15px;
-
-        @media (max-width: 1599px) {
-            padding: 0 0 0 15px;
-            font-size: 13px;
-        }
     }
 }
 
@@ -249,25 +172,6 @@
 
         span {
             font-size: 20px;
-        }
-    }
-
-    @media (max-width: 1599px) {
-        width: 280px;
-        padding: 22px 20px;
-
-        &__title {
-            font-size: 20px;
-        }
-
-        &__result-title,
-        &__result-month,
-        &__result-year {
-            font-size: 14px;
-
-            span {
-                font-size: 17px;
-            }
         }
     }
 }
