--- a/source/template/sections/eleventh.pug
+++ b/source/template/sections/eleventh.pug
@@ -50,3 +50,6 @@ section.eleventh.is-decor--top-left.is-decor--bottom-right
                             p Мы принципиально против таких уловок, мы не хотим заманивать Вас бросовой ценой, чтобы после её технично увеличить в разы. Поэтому мы поступаем иначе. Как?
                             p Встречаемся, или связываемся по скайпу и общаемся с Вами. Выясняем ваши потребности, возможности и желания, и лишь после рассчитываем полную стоимость франшизы, называя Вам ее без утайки. Так куда честнее, согласны? 
                             p При этом, мы гарантируем, что цена будет доступной и быстро окупаемой. А экономия времени и денег, вкупе с нашими фирменными гарантиями и бесплатным дизайн-проектом и вовсе делают франшизу самой выгодной из всех возможных.
+            .eleventh__pagination
+                .eleventh__pagination-left.is-active
+                .eleventh__pagination-right
