--- a/source/template/sections/fifteenth.pug
+++ b/source/template/sections/fifteenth.pug
@@ -2,8 +2,8 @@ section.fifteenth.is-decor--top-left
     .fifteenth__outer
         .container
             .fifteenth__title
-                .fifteenth__title--red заполни анкету потенциального партнёра и 
-                .fifteenth__title--white стань частью команды CyberX уже сейчас!
+                span.fifteenth__title--red заполни анкету потенциального партнёра и 
+                span.fifteenth__title--white стань частью команды CyberX уже сейчас!
             .fifteenth__inner
                 .fifteenth__content
                     .fifteenth__form
@@ -16,7 +16,6 @@ section.fifteenth.is-decor--top-left
                                         input(type="text" id="form15name" placeholder="Ваше имя")
                                     .fifteenth__form-input.is-necessarily
                                         input(type="text" id="form15phone" name="form15phone" placeholder="Ваш телефон")
-                                    //- label(for="form15phone") *
                                     .fifteenth__form-input.is-necessarily
                                         input(type="text" id="form15mail" placeholder="Ваш e-mail")
                                     .fifteenth__form-input
