--- a/source/template/sections/twelfth.pug
+++ b/source/template/sections/twelfth.pug
@@ -14,13 +14,13 @@ section.twelfth.is-decor--top-right.is-decor--bottom-left
                     a(href="#").twelfth__item
                         img(src="images/twelfth/club.jpg")
                         | г. Москва, ул. центральная 19
-                    a(href="#").twelfth__item
+                    a(href="#").twelfth__item.is-close
                         img(src="images/twelfth/club.jpg")
                         | г. Москва, ул. центральная 19
-                    a(href="#").twelfth__item
+                    a(href="#").twelfth__item.is-close
                         img(src="images/twelfth/club.jpg")
                         | г. Москва, ул. центральная 19
-                    a(href="#").twelfth__item
+                    a(href="#").twelfth__item.is-close
                         img(src="images/twelfth/club.jpg")
                         | г. Москва, ул. центральная 19
                 .twelfth__button
