--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -11,15 +11,15 @@
 // $spritesheet: width height image $spritesheet-sprites;
 $angle-name: 'angle';
 $angle-x: 262px;
-$angle-y: 125px;
+$angle-y: 162px;
 $angle-offset-x: -262px;
-$angle-offset-y: -125px;
+$angle-offset-y: -162px;
 $angle-width: 29px;
 $angle-height: 29px;
 $angle-total-width: 306px;
 $angle-total-height: 256px;
 $angle-image: '../images/sprite.png';
-$angle: (262px, 125px, -262px, -125px, 29px, 29px, 306px, 256px, '../images/sprite.png', 'angle', );
+$angle: (262px, 162px, -262px, -162px, 29px, 29px, 306px, 256px, '../images/sprite.png', 'angle', );
 $calendar-name: 'calendar';
 $calendar-x: 77px;
 $calendar-y: 58px;
@@ -44,15 +44,15 @@ $chat-image: '../images/sprite.png';
 $chat: (142px, 0px, -142px, 0px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'chat', );
 $close-name: 'close';
 $close-x: 262px;
-$close-y: 154px;
+$close-y: 191px;
 $close-offset-x: -262px;
-$close-offset-y: -154px;
+$close-offset-y: -191px;
 $close-width: 25px;
 $close-height: 25px;
 $close-total-width: 306px;
 $close-total-height: 256px;
 $close-image: '../images/sprite.png';
-$close: (262px, 154px, -262px, -154px, 25px, 25px, 306px, 256px, '../images/sprite.png', 'close', );
+$close: (262px, 191px, -262px, -191px, 25px, 25px, 306px, 256px, '../images/sprite.png', 'close', );
 $contract-name: 'contract';
 $contract-x: 142px;
 $contract-y: 60px;
@@ -154,48 +154,48 @@ $play-big-image: '../images/sprite.png';
 $play-big: (0px, 66px, 0px, -66px, 70px, 70px, 306px, 256px, '../images/sprite.png', 'play-big', );
 $play-name: 'play';
 $play-x: 262px;
-$play-y: 179px;
+$play-y: 216px;
 $play-offset-x: -262px;
-$play-offset-y: -179px;
+$play-offset-y: -216px;
 $play-width: 20px;
 $play-height: 20px;
 $play-total-width: 306px;
 $play-total-height: 256px;
 $play-image: '../images/sprite.png';
-$play: (262px, 179px, -262px, -179px, 20px, 20px, 306px, 256px, '../images/sprite.png', 'play', );
+$play: (262px, 216px, -262px, -216px, 20px, 20px, 306px, 256px, '../images/sprite.png', 'play', );
 $plus-red-mini-name: 'plus-red--mini';
 $plus-red-mini-x: 287px;
-$plus-red-mini-y: 154px;
+$plus-red-mini-y: 191px;
 $plus-red-mini-offset-x: -287px;
-$plus-red-mini-offset-y: -154px;
+$plus-red-mini-offset-y: -191px;
 $plus-red-mini-width: 18px;
 $plus-red-mini-height: 18px;
 $plus-red-mini-total-width: 306px;
 $plus-red-mini-total-height: 256px;
 $plus-red-mini-image: '../images/sprite.png';
-$plus-red-mini: (287px, 154px, -287px, -154px, 18px, 18px, 306px, 256px, '../images/sprite.png', 'plus-red--mini', );
+$plus-red-mini: (287px, 191px, -287px, -191px, 18px, 18px, 306px, 256px, '../images/sprite.png', 'plus-red--mini', );
 $plus-red-name: 'plus-red';
 $plus-red-x: 262px;
-$plus-red-y: 65px;
+$plus-red-y: 102px;
 $plus-red-offset-x: -262px;
-$plus-red-offset-y: -65px;
+$plus-red-offset-y: -102px;
 $plus-red-width: 30px;
 $plus-red-height: 30px;
 $plus-red-total-width: 306px;
 $plus-red-total-height: 256px;
 $plus-red-image: '../images/sprite.png';
-$plus-red: (262px, 65px, -262px, -65px, 30px, 30px, 306px, 256px, '../images/sprite.png', 'plus-red', );
+$plus-red: (262px, 102px, -262px, -102px, 30px, 30px, 306px, 256px, '../images/sprite.png', 'plus-red', );
 $plus-name: 'plus';
 $plus-x: 262px;
-$plus-y: 95px;
+$plus-y: 132px;
 $plus-offset-x: -262px;
-$plus-offset-y: -95px;
+$plus-offset-y: -132px;
 $plus-width: 30px;
 $plus-height: 30px;
 $plus-total-width: 306px;
 $plus-total-height: 256px;
 $plus-image: '../images/sprite.png';
-$plus: (262px, 95px, -262px, -95px, 30px, 30px, 306px, 256px, '../images/sprite.png', 'plus', );
+$plus: (262px, 132px, -262px, -132px, 30px, 30px, 306px, 256px, '../images/sprite.png', 'plus', );
 $price-tag-name: 'price-tag';
 $price-tag-x: 202px;
 $price-tag-y: 120px;
@@ -218,6 +218,17 @@ $security-total-width: 306px;
 $security-total-height: 256px;
 $security-image: '../images/sprite.png';
 $security: (0px, 196px, 0px, -196px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'security', );
+$swipe-name: 'swipe';
+$swipe-x: 262px;
+$swipe-y: 65px;
+$swipe-offset-x: -262px;
+$swipe-offset-y: -65px;
+$swipe-width: 40px;
+$swipe-height: 37px;
+$swipe-total-width: 306px;
+$swipe-total-height: 256px;
+$swipe-image: '../images/sprite.png';
+$swipe: (262px, 65px, -262px, -65px, 40px, 37px, 306px, 256px, '../images/sprite.png', 'swipe', );
 $team-name: 'team';
 $team-x: 60px;
 $team-y: 196px;
@@ -243,7 +254,7 @@ $withus: (77px, 0px, -77px, 0px, 65px, 58px, 306px, 256px, '../images/sprite.png
 $spritesheet-width: 306px;
 $spritesheet-height: 256px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($angle, $calendar, $chat, $close, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $play-big, $play, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $team, $withus, );
+$spritesheet-sprites: ($angle, $calendar, $chat, $close, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $play-big, $play, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $swipe, $team, $withus, );
 $spritesheet: (306px, 256px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
