--- a/source/styles/sections/eighth.scss
+++ b/source/styles/sections/eighth.scss
@@ -1,31 +1,13 @@
 .eighth {
-    position: relative;
-    padding: 56.75% 0 0;
-    background: url('../images/eighth/eighth_bg.png') center center no-repeat;
+    padding: 0 0 60px;
+    background: url('../images/eighth/eighth_bg_750.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
 
-    &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        text-align: left;
-    }
-
-    &__inner {
-        width: 83.33%;
-
-        @media (max-width: 1919px) {
-            margin: 0 0 0 7%;
-        }
-    }
-
     &__title {
-        padding: 99px 0 91px 140px;
+        padding: 31px 0 39px;
         font-family: "RussoOne";
-        font-size: 40px;
+        font-size: 30px;
         line-height: 1.85;
         letter-spacing: -0.7px;
         text-align: center;
@@ -34,57 +16,31 @@
 
         span {
             display: block;
-            font-size: 30px;
-            line-height: 35px;
+            font-size: 20px;
+            line-height: 25px;
             letter-spacing: -0.4px;
         }
         
         &--dark {
             color: #000;
         }
-
-        @media (max-width: 1919px) {
-            padding: 40px 0 91px 70px;
-        }
-
-        @media (max-width: 1599px) {
-            padding: 30px 0 50px 70px;
-            font-size: 32px;
-
-            span {
-                font-size: 22px;
-            }
-        }
     }
 
     &__subtitle {
         position: relative;
-        width: 950px;
-        margin: 0 0 22px;
-
-        @media (max-width: 1919px) {
-            margin: 0 0 22px 100px;
-        }
-
-        @media (max-width: 1599px) {
-            width: 800px;
-            margin: 0 0 22px 50px;
-        }
+        width: 300px;
+        margin: 0 auto 3px;
     }
 
     &__subtitle-num {
         position: absolute;
-        top: -83px;
+        top: -31px;
         left: 57px;
         font-family: "RussoOne";
-        font-size: 225px;
+        font-size: 110px;
         line-height: 1;
         letter-spacing: -3px;
         color: #bf1e2e;
-
-        @media (max-width: 1599px) {
-            font-size: 170px;
-        }
 
         &:after {
             content: '';
@@ -102,33 +58,26 @@
     }
 
     &__subtitle-title {
-        padding: 20px 0 6px 39px;
+        padding: 20px 0 6px 34px;
         font-family: "RoadRadio-Black";
-        font-size: 35px;
+        font-size: 22px;
         letter-spacing: -0.7px;
         color: #bf1e2e;
-
-        @media (max-width: 1599px) {
-            font-size: 24px;
-        }
     }
 
     &__subtitle-text {
-        padding: 0 0 25px 136px;
+        padding: 0 0 34px;
         font-family: "RoadRadio-Bold";
-        font-size: 25px;
+        font-size: 18px;
         letter-spacing: -0.7px;
+        text-align: center;
         color: #3b3b3b;
-
-        @media (max-width: 1599px) {
-            font-size: 19px;
-        }
     }
 
     &__subtitle-decor--top {
         position: absolute;
-        top: -5px;
-        left: 7px;
+        top: -1px;
+        left: 5px;
         width: 30px;
         height: 30px;
     }
@@ -136,7 +85,7 @@
     &__subtitle-decor--bottom {
         position: absolute;
         bottom: 0;
-        right: 3px;
+        right: 5px;
         width: 30px;
         height: 30px;
 
@@ -150,45 +99,25 @@
         justify-content: space-between;
         align-items: flex-start;
         flex-wrap: wrap;
-        padding: 0 0 0 88px;
-
-        @media (max-width: 1919px) {
-            justify-content: flex-start;
-        }
+        padding: 0 0 0 100px;
     }
 
     &__user {
         display: flex;
+        flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        width: 583px;
-        margin: 0 0 36px;
-
-        @media (max-width: 1919px) {
-            width: 48%;
-            margin: 0 0 15px;
-        }
-
-        @media (max-width: 1599px) {
-            width: 46%;
-        }
+        width: 50%;
+        margin: 0 0 -9px;
     }
 
     &__user-photo {
-        @media (max-width: 1599px) {
-            width: 130px;
-            height: 130px;
-
-            img {
-                transform: scale(0.7);
-                transform-origin: 0% 20%;
-            }
-        }
+        text-align: center;
+        margin: 0 0 -6px;
     }
 
     &__user-content {
         position: relative;
-        padding: 37px 0 0 32px;
         letter-spacing: -0.5px;
     }
 
@@ -196,46 +125,31 @@
         font-family: "RoadRadio-Bold";
         font-size: 20px;
         color: #000;
-
-        @media (max-width: 1599px) {
-            font-size: 17px;
-        }
     }
 
     &__user-descr {
         font-family: "RoadRadio-Bold";
-        font-size: 18px;
+        font-size: 17px;
         color: #000;
         margin: 0 0 3px;
-
-        @media (max-width: 1599px) {
-            font-size: 15px;
-        }
     }
-
+    
     &__user-text {
+        padding: 0 30px 0 0;
         font-family: "Jura-DemiBold";
-        font-size: 18px;
+        font-size: 15px;
         letter-spacing: -0.4px;
         color: #3b3b3b;
 
         span {
             font-size: 24px;
         }
-
-        @media (max-width: 1599px) {
-            font-size: 15px;
-
-            span {
-                font-size: 19px;
-            }
-        }
     }
 
     &__user-decor {
         position: absolute;
-        top: 20px;
-        left: 5px;
+        top: -32px;
+        left: -26px;
         width: 30px;
         height: 30px;
     }
