--- a/source/styles/sections/fifth.scss
+++ b/source/styles/sections/fifth.scss
@@ -1,47 +1,26 @@
 .fifth {
-    position: relative;
-    padding: 56.75% 0 0;
-    background: url('../images/fifth/fifth_bg.png') center center no-repeat;
+    background: url('../images/fifth/fifth_bg_750.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
 
     &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        text-align: left;
+
     }
 
     &__inner {
-        width: 83.33%;
-
-        @media (max-width: 1919px) {
-            width: 75%;
-            margin: 0 0 0 8.33%;
-        }
+ 
     }
 
     &__title {
-        padding: 111px 53px 0 8px;
-        font-size: 30px;
+        padding: 35px 0 0;
+        font-size: 25px;
         font-family: "RussoOne";
         letter-spacing: -0.4px;
         color: #bf1e2e;
         text-transform: uppercase;
         line-height: 1.2;
         text-align: left;
-        margin: 0 0 83px;
-
-        @media (max-width: 1919px) {
-            padding: 50px 53px 0 8px;
-        }
-
-        @media (max-width: 1599px) {
-            font-size: 27px;
-            margin: 0 0 30px;
-        }
+        margin: 0 0 16px;
 
         span {
             padding: 0 10px 0 0;
@@ -50,40 +29,34 @@
     }
 
     &__grafics {
-        display: flex;
-        justify-content: space-between;
-        align-items: stretch;
+
         color: #fff;
         margin: 0 0 22px;
     }
 
     &__grafics-gold,
     &__grafics-ciber {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        width: 640px;
+        margin: 0 auto 26px;
     }
 
     &__grafics-image img {
-        @media (max-width: 1919px) {
-            width: 550px;
-        }
 
-        @media (max-width: 1599px) {
-            width: 420px;
-        }
     }
     
     &__grafics-title {
         padding: 0 0 0 10px;
         font-family: "RoadRadio";
-        font-size: 25px;
-        margin: 0 0 -25px;
+        font-size: 20px;
+        margin: 0 0 22px;
 
-        @media (max-width: 1599px) {
-            font-size: 18px;
-            margin: 0;
+        br {
+            display: none;
         }
+    }
+
+    &__grafics-ciber .fifth__grafics-title {
+        margin: 0 0 -39px;
     }
     
     &__text {
@@ -93,40 +66,31 @@
 
     &__link-forbes {
         font-family: "RoadRadio";
-        font-size: 20px;
+        font-size: 18px;
         letter-spacing: -0.2px;
-        margin: 0 0 55px;
-
-        @media (max-width: 1919px) {
-            font-size: 19px;
-        }
-
-        @media (max-width: 1599px) {
-            font-size: 14px;
-            margin: 0 0 20px;
-        }
+        margin: 0 0 18px;
 
         a {
             color: #bf1e2e;
         }
-    }
 
-    &__text-title {
-        padding: 0 0 30px 11px;
-        font-family: "RussoOne";
-        font-size: 25px;
-        letter-spacing: -0.45px;
-        text-transform: uppercase;
-
-        @media (max-width: 1599px) {
-            font-size: 19px;
+        br {
+            display: none;
         }
     }
 
-    &__text-call {
-        padding: 0 0 0 13px;
+    &__text-title {
+        padding: 0 0 16px;
         font-family: "RussoOne";
-        font-size: 40px;
+        font-size: 20px;
+        letter-spacing: -0.45px;
+        text-transform: uppercase;
+    }
+
+    &__text-call {
+        padding: 0 0 32px 0;
+        font-family: "RussoOne";
+        font-size: 30px;
         letter-spacing: -0.5px;
         color: rgb(255, 255, 255);
         text-transform: uppercase;
@@ -135,9 +99,6 @@
                     15px -15px 20px #bf1e2e,
                     -15px -15px 20px #bf1e2e;
 
-        @media (max-width: 1599px) {
-            font-size: 32px;
-        }
     }
 }
 
