--- a/source/styles/sections/form_one.scss
+++ b/source/styles/sections/form_one.scss
@@ -1,57 +1,43 @@
 .form_one {
-    position: relative;
+    height: 310px;
+    background: url('../images/first/first_bg_750.png') center top no-repeat;
+    background-size: cover;
+    margin: -5px 0 0;
 
     &__outer {
-        padding: 15.625% 0 0;
-        background: url('../images/form_one/form_one_bg.png') center center no-repeat;
-        background-size: cover;
+        display: none;
     }
 
     &__inner {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
         height: 100%;
+        background: rgba(red, 0.4);
     }
 
     .container {
-        display: flex;
-        height: 100%;
-        justify-content: space-around;
-        align-items: center;
-        padding: 0 98px;
 
-        @media (max-width: 1599px) {
-            padding: 0 15px;
-        }
-        
     }
 
     &__title {
-        padding: 0 0 5px;
+        width: 600px;
+        padding: 70px 0 9px;
         font-family: "RoadRadio-Bold";
         font-size: 30px;
         line-height: 1.2;
         letter-spacing: -0.8px;
+        text-align: center;
         text-transform: uppercase;
         color: #fff;
         border-bottom: 2px solid #fff;
-        margin: 5px 0 0 31px;
-
-        @media (max-width: 1599px) {
-            font-size: 27px;
-        }
+        margin: 5px auto 31px;
     }
 
     &__button {
-        margin: 14px 96px 0 0;
 
         button {
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 360px;
+            width: 460px;
             height: 50px;
             font-family: "Jura-DemiBold";
             font-size: 20px;
@@ -61,6 +47,7 @@
             border: none;
             background-color: #fff;
             transition: box-shadow 0.5s ease;
+            margin: 0 auto;
 
             &:hover {
                 box-shadow: 0 0 10px 3px rgba(#fff, 0.4);
