--- a/source/styles/sections/form_too.scss
+++ b/source/styles/sections/form_too.scss
@@ -1,53 +1,37 @@
 .form_too {
+    padding: 0 0 40px;
     position: relative;
-    padding: 15.625% 0 0;
     background-color: #000;
-    margin: -1px 0 0;
-    
-    &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('../images/form_too/form_too_bg.jpg') left center no-repeat;
-        background-size: auto 100%;
-    }
-
-    &__inner {
-        height: 100%;
-        background: linear-gradient(to left, #3B0A0F 15.791%, rgba(#fff, 0) 15.791%);
-    }
+    background: url('../images/form_too/form_too_bg.jpg') left center no-repeat;
+    background-size: cover;
+    margin: -5px 0 0;
 
     .container {
-        display: flex;
-        height: 100%;
-        justify-content: space-around;
-        align-items: center;
-        padding: 0 98px;
 
-        @media (max-width: 1599px) {
-            padding: 0 15px;
-        }
+        padding: 0 98px;
     }
 
     &__title {
-        padding: 0 0 5px;
+        width: 600px;
+        padding: 70px 0 9px;
         font-family: "RoadRadio-Bold";
         font-size: 30px;
         line-height: 1.2;
         letter-spacing: -0.8px;
+        text-align: center;
         text-transform: uppercase;
         color: #fff;
-        border-bottom: 2px solid #bf1e2e;
-        margin: 0 0 0 31px;
-
-        @media (max-width: 1599px) {
-            font-size: 27px;
-        }
+        border-bottom: 2px solid #fff;
+        margin: 5px auto 31px;
     }
 
     &__button {
-        margin: 14px 88px 0 0;
+        margin: 14px 0 40px;
+
+        .button--red {
+            width: 470px;
+            height: 50px;
+            margin: 0 auto;
+        }
     }
 }
