--- a/source/styles/sections/ninth.scss
+++ b/source/styles/sections/ninth.scss
@@ -1,80 +1,37 @@
 .ninth {
-    position: relative;
-    padding: 56.75% 0 0;
+    padding: 0 0 60px;
     background: url('../images/ninth/ninth_bg.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
 
     &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
         color: #fff;
-        background: url('../images/ninth/red.png') 85% 35% no-repeat;
+        background: url('../images/ninth/red.png') 11% 35% no-repeat;
     }
     
     &__inner {
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
-        width: 83.33%;
-        padding: 208px 0 0;
-
-        @media (max-width: 1919px) {
-            padding: 150px 0 0;
-            margin: 0 0 0 150px;
-        }
-
-        @media (max-width: 1599px) {
-            padding: 112px 0 0;
-            margin: 0 0 0 8vw;
-        }
     }
     
     &__item {
-        width: 490px;
-        margin: 0 0 0 8px;
-
-        @media (max-width: 1599px) {
-            width: 370px;
-        }
-
-        &:first-child {
-            margin: 0 225px 0 8px;
-
-            @media (max-width: 1919px) {
-                margin: 0 100px 0 8px;
-            }
-
-            @media (max-width: 1599px) {
-                margin: 0 70px 0 8px;
-            }
-        }
+        width: 47.5%;
+        padding: 29px 0 0;
+        margin: 0 2.5% 0 8px;
 
         &--red {
             .ninth__item-title {
-                padding: 0 106px 20px 0;
                 color: #bf1e2e;
-
-                @media (max-width: 1599px) {
-                    padding: 0 50px 20px 0;
-                }
 
                 span {
                     border-color: #bf1e2e;
                 }
             }
 
-            .ninth__item-text {
-                padding: 22px 23px 18px 28px;
-
-                p {
-                    padding: 0;
-                    margin: 0 0 10px;
-                }
-
+            .ninth__item-text p {
+                padding: 0;
+                margin: 0 0 10px;
             }
             
             .ninth__item-icon {
@@ -88,9 +45,9 @@
     }
     
     &__item-title {
-        padding: 0 26px 20px 0;
+        padding: 0 26px 68px 0;
         font-family: "RoadRadio-bold";
-        font-size: 35px;
+        font-size: 25px;
         letter-spacing: -0.3px;
         text-align: center;
         
@@ -103,38 +60,30 @@
             text-align-last: left;
             border-bottom: 1px solid #fff;
         }
-
-        @media (max-width: 1599px) {
-            font-size: 24px;
-        }
     }
 
     &__item-text {
         position: relative;
-        padding: 59px 23px 59px 29px;
+        padding: 62px 17px 17px 11px;
         font-family: "Jura-DemiBold";
-        font-size: 20px;
-        line-height: 1.5;
+        font-size: 18px;
+        line-height: 23px;
         letter-spacing: -0.3px;
         text-shadow: 0px 1px 17.1px rgba(0, 0, 0, 0.63);
         color: #fefefe;
         border-radius: 3px;
         border: 1px dashed rgba(#fff, 0.2);
-
-        @media (max-width: 1599px) {
-            font-size: 16px;
-        }
     }
 
     &__item-icon {
         position: absolute;
         top: -58px;
-        right: -58px;
+        left: calc(50% - 55px);
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 116px;
-        height: 116px;
+        width: 110px;
+        height: 110px;
         border-radius: 50%;
         border: 1px dashed rgba(#fff, 0.2);
     }
