--- a/source/styles/sections/tenth.scss
+++ b/source/styles/sections/tenth.scss
@@ -1,42 +1,20 @@
 .tenth {
-    position: relative;
-    padding: 56.75% 0 0;
-    background: #e8e8e8 radial-gradient(circle, rgba(#e8e8e8, 0), #e8e8e8) right top no-repeat;
-    background-size: 15.75% 50%;
+    height: 310px;
     overflow: hidden;
 
-    &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to left, rgba(#fff, 0) 15.75%, #fff 15.75%) right center no-repeat;
-        background-size: 100% 100%;
-        opacity: 0.99;
-    }
-    
     &__title {
-        padding: 112px 113px 0 0;
+        padding: 32px 0 0;
         font-family: "RussoOne";
-        font-size: 40px;
+        font-size: 30px;
         letter-spacing: -0.7px;
         text-transform: uppercase;
-        margin: 0 0 265px;
-
-        @media (max-width: 1599px) {
-            font-size: 32px;
-        }
-
-        @media (max-width: 1599px) {
-            margin: 0 0 150px;
-        }
+        margin: 0 0 65px;
     }
 
     &__title--red  {
         color: #bf1e2e;
         text-align: center;
-        margin: 0 0 -2px;
+        margin: 0 0;
     }
 
     &__title--dark {
@@ -46,9 +24,10 @@
 
     &__logo {
         padding: 0 0 0 6px;
+        text-align: center;
 
-        @media (max-width: 1919px) {
-            padding: 0 0 0 130px;
+        img {
+            max-width: 45%;
         }
     }
 }
