--- a/source/styles/sections/thirteenth.scss
+++ b/source/styles/sections/thirteenth.scss
@@ -1,42 +1,20 @@
 .thirteenth {
-    position: relative;
-    padding: 56.75% 0 0;
-    background: url('../images/thirteenth/thirteenth_bg.png') center center no-repeat;
+    padding: 0 0 60px;
+    background: url('../images/thirteenth/thirteenth_bg_750.png') center center no-repeat;
     background-size: cover;
     overflow: hidden;
 
     &__outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
         color: #000;
     }
 
-    &__inner {
-        width: 75%;
-        padding: 0 15px;
-        margin: 0 0 0 8.33%;
-    }
-
     &__title {
-        padding: 112px 113px 0 0;
+        padding: 33px 0 0 29px;
         font-family: "RussoOne";
-        font-size: 40px;
-        letter-spacing: -0.7px;
+        font-size: 30px;
+        letter-spacing: -0.4px;
         text-transform: uppercase;
         margin: 0 0 39px;
-
-        @media (max-width: 1919px) {
-            padding: 60px 113px 0 0;
-        }
-
-        @media (max-width: 1599px) {
-            padding: 40px 113px 0 0;
-            font-size: 32px;
-            margin: 0 0 2vw;
-        }
     }
 
     &__title--red {
@@ -51,39 +29,26 @@
     }
 
     &__player {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        margin: 0 0 23px;
+        margin: 0 0 0;
 
         .video {
-            width: 572px;
-            height: 318px;
-
-            @media (max-width: 1599px) {
-                width: 400px;
-                height: 222px;
-            }
+            width: 581px;
+            height: 288px;
+            margin: 0 auto;
         }
     }
 
     &__player-descr {
+        display: flex;
+        flex-direction: column-reverse;
         font-family: "RoadRadio-Black";
         font-size: 25px;
-        margin: 0 52px 0 0;
+        margin: 0 0 0 0;
         
         span {
             display: block;
             font-family: "RoadRadio-Bold";
-            font-size: 22px;
-        }
-
-        @media (max-width: 1599px) {
-            font-size: 19px;
-
-            span {
-                font-size: 15px;
-            }
+            font-size: 20px;
         }
     }
     
@@ -91,6 +56,10 @@
         position: relative;
         padding: 19px 16px 24px 24px;
         margin: 0 0 23px;
+
+        br {
+            display: none;
+        }
     }
 
     &__playr-decor--top,
@@ -116,12 +85,10 @@
     }
 
     &__player-address {
+        width: 581px;
         font-family: "RoadRadio";
         font-size: 18px;
-
-        @media (max-width: 1599px) {
-            font-size: 16px;
-        }
+        margin: 12px auto;
 
         .icon {
             margin: 0 3px 0 0;
@@ -130,29 +97,17 @@
 
     &__items {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: flex-start;
-
-        @media (max-width: 1599px) {
-            margin: 0 0 2vw;
-        }
+        flex-wrap: wrap;
 
         .twelfth__item {
             position: relative;
             color: #000;
 
-            @media (max-width: 1919px) {
-                margin: 0 0 20px;
-            }
-
             img {
-                width: 356px;
-                height: 236px;
-
-                @media (max-width: 1599px) {
-                    width: 270px;
-                    height: 179px;
-                }
+                width: 300px;
+                height: 200px;
             }
 
             &:after {
@@ -165,6 +120,12 @@
                 @include sprite($play-big);
             }
         }
+    }
+
+    &__button .button--red {
+        width: 460px;
+        height: 50px;
+        margin: 0 auto;
     }
 }
 
