--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -9,21 +9,21 @@ html(lang='ru')
         title CyberX
     body
         include sections/first
-        //- include sections/form_one
-        //- include sections/second
-        //- include sections/third
-        //- include sections/fourth
-        //- include sections/fifth
-        //- include sections/form_too
-        //- include sections/sixth
-        //- include sections/eighth
-        //- include sections/ninth
-        //- include sections/tenth
-        //- include sections/eleventh
-        //- include sections/twelfth
-        //- include sections/thirteenth
+        include sections/form_one
+        include sections/second
+        include sections/third
+        include sections/fourth
+        include sections/fifth
+        include sections/form_too
+        include sections/sixth
+        include sections/eighth
+        include sections/ninth
+        include sections/tenth
+        include sections/eleventh
+        include sections/twelfth
+        include sections/thirteenth
         //- include sections/fourteenth
-        //- include sections/fifteenth
+        include sections/fifteenth
 
         //- script(src="/js/main.js")
         
